// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-shaking-import antd flavor: antd flavor 1`] = `

import { Button, DatePicker, message } from 'antd';

message.info('babel-plugin-shaking-import');

      ↓ ↓ ↓ ↓ ↓ ↓

import Button from 'antd/lib/button';
import DatePicker from 'antd/lib/date-picker';
import message from 'antd/lib/message';
message.info('babel-plugin-shaking-import');


`;

exports[`babel-plugin-shaking-import antd flavor: antd flavor 2`] = `

import { Button, DatePicker, message } from 'antd';

message.info('babel-plugin-shaking-import');

      ↓ ↓ ↓ ↓ ↓ ↓

import 'antd/lib/button/style';
import Button from 'antd/lib/button';
import 'antd/lib/date-picker/style';
import DatePicker from 'antd/lib/date-picker';
import 'antd/lib/message/style';
import message from 'antd/lib/message';
message.info('babel-plugin-shaking-import');


`;

exports[`babel-plugin-shaking-import antd flavor: antd flavor 3`] = `

import { Button, DatePicker, message } from 'antd';

message.info('babel-plugin-shaking-import');

      ↓ ↓ ↓ ↓ ↓ ↓

import 'antd/lib/button/style/css';
import Button from 'antd/lib/button';
import 'antd/lib/date-picker/style/css';
import DatePicker from 'antd/lib/date-picker';
import 'antd/lib/message/style/css';
import message from 'antd/lib/message';
message.info('babel-plugin-shaking-import');


`;

exports[`babel-plugin-shaking-import lodash flavor: lodash flavor 1`] = `

import { forEachRight, dropWhile } from 'lodash';

      ↓ ↓ ↓ ↓ ↓ ↓

import forEachRight from 'lodash/forEachRight';
import dropWhile from 'lodash/dropWhile';


`;

exports[`babel-plugin-shaking-import react-toolbox flavor: react-toolbox flavor 1`] = `

import { TimePicker } from 'react-toolbox';

      ↓ ↓ ↓ ↓ ↓ ↓

import TimePicker from 'react-toolbox/lib/time_picker';


`;

exports[`babel-plugin-shaking-import rxjs flavor: rxjs flavor 1`] = `

import { Observable, Subject } from 'rxjs';

      ↓ ↓ ↓ ↓ ↓ ↓

import { Observable } from 'rxjs/Observable';
import { Subject } from 'rxjs/Subject';


`;

exports[`babel-plugin-shaking-import skip import default declaration: skip import default declaration 1`] = `

import _, { forEachRight, dropWhile } from 'lodash';

      ↓ ↓ ↓ ↓ ↓ ↓

import _, { forEachRight, dropWhile } from 'lodash';


`;
